fix nav z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,7 @@ body {
 
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100vw;
   background: linear-gradient(90deg, #FFA1B8 0%, #0495FF 100%);
 }
